# aikido_teleoperation_reference

./: .gitignore  CMakeLists.txt  README.md  catkin.cmake  package.xml  setup.py
launch/: dev.launch
src/aikido_teleoperation/: bc_policy.py  collect_data_with_prompts.py  combined.launch  jaco_gym.py  jaco_scene.py  recbc_policy.py  rollout_trajectory.py  servo_controller.py
src/aikido_teleoperation/controllers/: jaco_ik_controller.py
src/aikido_teleoperation/user_interface/: ds4_controller.py  joystick_controller.py  oculus_vr_controller.py
src/aikido_teleoperation/utils/: general_utils.py
